hphp/test/quick/typedef_option3.php.expectf
NULL
int(2)
HipHop Fatal error: Argument 1 passed to wat() must be an instance of bar, string given in %s on line 8
